--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.4
+  image_picker: ^1.1.2
+  shared_preferences: ^2.0.11
+  provider: ^6.0.1
+
+  flutter_local_notifications: ^9.9.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
